# agent-hub

./: .gitignore  Design.md  package.json  pnpm-lock.yaml
bridges/wechat/: bridge.js  index.js  package-lock.json  package.json  protocol.js
src-tauri/: 2026_Spring_Festival_AI_Analysis_Report.md  Cargo.toml  iagenthub-wechat.memory-card.json  tauri.conf.json
src-tauri/.next/: trace  trace-build
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_orchestration.sql  003_agent_features.sql  004_fix_status_constraints.sql  005_agent_enabled.sql  006_cache_tokens.sql  007_rating.sql  008_scheduling.sql  009_agent_skills.sql  010_workspaces.sql  011_chat_tools.sql
src-tauri/resources/claude-code-acp/: acp-agent.js
src-tauri/src/: error.rs  lib.rs  scheduler.rs  state.rs
src-tauri/src/acp/: builtin.rs  client.rs  discovery.rs  filesystem.rs  manager.rs  mod.rs  orchestrator.rs  permissions.rs  provisioner.rs  skill_discovery.rs  terminal.rs  transport.rs  upgrade.rs
src-tauri/src/chat_tool/: bridge.rs  manager.rs
src-tauri/src/commands/: acp_commands.rs  agent_commands.rs  chat_commands.rs  chat_tool_commands.rs  mod.rs  orchestration_commands.rs  session_commands.rs  settings_commands.rs  workspace_commands.rs
src-tauri/src/db/: agent_md.rs  agent_repo.rs  chat_tool_repo.rs  message_repo.rs  migrations.rs  mod.rs  session_repo.rs  settings_repo.rs  task_run_repo.rs  workspace_repo.rs
src-tauri/src/models/: agent.rs  chat_tool.rs  message.rs  mod.rs  session.rs  settings.rs  task_run.rs  workspace.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatSection.tsx  CollapsibleContent.tsx  GeneratedFileBlock.tsx  InlinePermission.tsx  MarkdownContent.tsx  MessageList.tsx  (+3 more)
src/components/chat-tools/: ChatToolConfigPanel.tsx  ChatToolCreateDialog.tsx  ChatToolPanel.tsx
src/lib/: tauri.ts
src/stores/: acpStore.ts  agentStore.ts  chatStore.ts  chatToolStore.ts  orchestrationStore.ts  settingsStore.ts  toastStore.ts  workspaceStore.ts
src/types/: acp.ts  agent.ts  chat.ts  chatTool.ts  orchestration.ts  workspace.ts
(+31 files in other folders)
