[package]
name = "ia-agent-hub"
version = "0.1.0"
description = "IAAgentHub - AI Agent Management Desktop App"
authors = ["IAAgentHub"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.36", features = ["bundled"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
